--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.port=${PORT:2020}
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.jpa.open-in-view=true
+
+spring.datasource.initialization-mode=always
 
